@@ -1,4 +1,7 @@
 $Rev$
+[2010/04/22]
+mGuessLang.py       Add #! /usr/bin/env python support thanks for zhangchunlin
+
 [2008/06/02]
 mEncoding.py EncodingDialog.py
                     Migirate EncodingDialog from xrc to meide
